--- a/editProfile.html
+++ b/editProfile.html
@@ -243,7 +243,7 @@
                 <div class="section-title d-flex justify-content-between">
                     <div>
                         <h2>About</h2>
-                        <p>Am a Pyhon Develope passsionate about Data Science, Machine Learning and Artificial Intelligence.</p>
+                        <p>I'm a Python Developer. Passionate about Data Science, Machine Learning and Artificial Intelligence.</p>
                     </div>
 
                     <div>
