--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <li>
                                 <i class="bx bx-images"></i>
                                 <div>
-                                    <h5>industries</h5>
+                                    <h5>Industries</h5>
                                     <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
                                 </div>
                             </li>
@@ -222,7 +222,7 @@
                         <div class="icon-box">
                             <div class="icon"><i class="bi bi-graph-up-arrow"></i></div>
                             <h4><a href="">Supply</a></h4>
-                            <p>We are accelerating the proliferation of AI-enabled solutions in industries feeding from local talent, thereby building a sustainable and thriving AI ecosystem in synergy with our counterparts abroad.</p>
+                            <p>We are accelerating AI education and expertise at the grassroots in Nigeria and the rest of Africa, exponentially growing the job-ready talent locally available.</p>
                         </div>
                     </div>
 
