--- a/userDashboard.html
+++ b/userDashboard.html
@@ -83,7 +83,7 @@
 
                 <div class="section-title">
                     <h2>About</h2>
-                    <p>Am a Pyhon Develope passsionate about Data Science, Machine Learning and Artificial Intelligence.</p>
+                    <p>I'm a Python Developer. Passionate about Data Science, Machine Learning and Artificial Intelligence.</p>
                 </div>
 
                 <div class="row">
