Feat: add edit buttons to experience and portfolio modal

--- a/editProfile.html
+++ b/editProfile.html
@@ -352,8 +352,14 @@
         <section id="resume" class="resume">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Experience</h2>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Experience</h2>
+                    </div>
+
+                    <div>
+                        <p data-toggle="modal" data-target="#experience_modal" style="margin-left: .5rem; background-color: #173b6c; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Edit</p>
+                    </div>
                 </div>
 
                 <div class="row">
@@ -408,8 +414,14 @@
         <section id="portfolio" class="portfolio section-bg">
             <div class="container">
 
-                <div class="section-title">
-                    <h2>Portfolio</h2>
+                <div class="section-title d-flex justify-content-between">
+                    <div>
+                        <h2>Portfolio</h2>
+                    </div>
+
+                    <div>
+                        <p data-toggle="modal" data-target="#portfolio_modal" style="margin-left: .5rem; background-color: #173b6c; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Edit</p>
+                    </div>
                 </div>
 
                 <div class="row" data-aos="fade-up">
