Fix: remove global edit button from portfolio

--- a/editProfile.html
+++ b/editProfile.html
@@ -483,13 +483,9 @@
         <section id="portfolio" class="portfolio section-bg">
             <div class="container">
 
-                <div class="section-title d-flex justify-content-between">
+                <div class="section-title">
                     <div>
                         <h2>Portfolio</h2>
-                    </div>
-
-                    <div>
-                        <p data-toggle="modal" data-target="#portfolio_modal" style="margin-left: .5rem; background-color: #173b6c; border-radius: .5rem .2rem; padding: .3rem; color: white; padding: .3rem 1rem; cursor: pointer;">Edit</p>
                     </div>
                 </div>
 
@@ -510,7 +506,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/chessBoard.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a data-toggle="modal" data-target="#portfolio_modal" href="#" title="Edit Details"><i class="bx bx-link"></i></a>
+                                <a data-toggle="modal" data-target="#portfolio_modal" href="#" title="Edit Details"><i class="bx bx-edit"></i></a>
                             </div>
                         </div>
                     </div>
@@ -519,7 +515,7 @@
                         <div class="portfolio-wrap">
                             <img src="assets/img/portfolio/blueberryProduct.png" class="img-fluid" alt="">
                             <div class="portfolio-links">
-                                <a href="#" title="More Details"><i class="bx bx-link"></i></a>
+                                <a data-toggle="modal" data-target="#portfolio_modal" href="#" title="Edit Details"><i class="bx bx-edit"></i></a>
                             </div>
                         </div>
                     </div>
