--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     <li><a class="nav-link scrollto" href="#about">Mission</a></li>
                     <li><a class="nav-link scrollto" href="#services">Services</a></li>
                     <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
+                    <li><a class="nav-link scrollto " href="#blogs">Blogs</a></li>
                     <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
                     <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
                 </ul>
@@ -440,6 +441,67 @@
             </div>
         </section> -->
         <!-- End Team Section -->
+
+        <!-- ======= Blog Section ======= -->
+        <section id="blogs" class="contact">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-title">
+                    <h2>Blogs</h2>
+                    <!-- <h3><span>Latest</span></h3> -->
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-4">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5>The Edge-breaking Technology</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-title">
+                                    <h2>
+                                        <a href="blogs/index.html">Read</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5>The Edge-breaking Technology</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-title">
+                                    <h2>
+                                        <a href="blogs/index.html">Read</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5>The Edge-breaking Technology</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-title">
+                                    <h2>
+                                        <a href="blogs/index.html">Read</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- End Blog Section -->
 
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
