--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <li><a class="nav-link scrollto " href="#portfolio">Products</a></li>
                     <li><a class="nav-link scrollto " href="#blogs">Blogs</a></li>
                     <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-                    <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                    <!-- <li><a class="nav-link scrollto" href="#contact">Contact</a></li> -->
+                    <li><a class="nav-link scrollto" href="#courses">Courses</a></li>
                 </ul>
                 <i style="color: white;" class="bi bi-list mobile-nav-toggle"></i>
             </nav>
@@ -491,6 +492,67 @@
                                 <div style="margin-top: 10px;" class="section-title">
                                     <h2>
                                         <a href="blogs/index.html">Read</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!-- End Blog Section -->
+
+        <!-- ======= Blog Section ======= -->
+        <section id="courses" class="contact">
+            <div class="container" data-aos="fade-up">
+
+                <div class="section-title">
+                    <h2>Courses</h2>
+                    <!-- <h3><span>Latest</span></h3> -->
+                </div>
+
+                <div class="row" data-aos="fade-up" data-aos-delay="100">
+                    <div class="col-lg-4">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem 1rem 4rem 2rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5 style="color: #149DDD;">Machine Learning</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-course-button">
+                                    <h2>
+                                        <a href="blogs/index.html">Enroll</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem 1rem 4rem 2rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5 style="color: #149DDD;">Project Management</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-course-button">
+                                    <h2>
+                                        <a href="blogs/index.html">Enroll</a>
+                                    </h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <div style="background-color: #f7f7f7; padding: 16px; border-radius: .5rem 1rem 4rem 2rem;" class="info-box mb-4">
+                            <img style="width: 100%;" src="landingPageAssets/img/Rectangle.png" class="testimonial-img" alt="">
+                            <div class="mt-3">
+                                <h5 style="color: #149DDD;">AI Nano-Degree</h5>
+                                <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
+                                <div style="margin-top: 10px;" class="section-course-button">
+                                    <h2>
+                                        <a href="blogs/index.html">Enroll</a>
                                     </h2>
                                 </div>
                             </div>
