--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -78,13 +78,13 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-01.jpg" alt="Image" class="img-fluid">
+                            <img src="../landingPageAssets/img/pic 3.jpeg" alt="Image" class="img-fluid">
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
-                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">Simple and useful HTML layout</h2>
+                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">Why Machine Learning?</h2>
                     </a>
                     <p class="tm-pt-30">
-                        There is a clickable image with beautiful hover effect and active title link for each post item. Left side is a sticky menu bar. Right side is a blog content that will scroll up and down.
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti fuga excepturi, eum optio quidem iste deleniti neque voluptatibus repellat itaque.
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Travel . Events</span>
@@ -100,14 +100,14 @@
                     <hr class="tm-hr-primary">
                     <a href="post.html" class="effect-lily tm-post-link tm-pt-60">
                         <div class=" tm-post-link-inner">
-                            <img src="img/img-02.jpg" alt="Image" class="img-fluid">
+                            <img src="../landingPageAssets/img/pic 2.jpeg" alt="Image" class="img-fluid">
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
-                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">Multi-purpose blog template</h2>
+                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">The Future of Work</h2>
                     </a>
                     <p class="tm-pt-30">
-                        <a rel="nofollow" href="https://templatemo.com/tm-553-xtra-blog" target="_blank">Xtra Blog</a> is a multi-purpose HTML CSS template from TemplateMo website. Blog list, single post, about, contact pages are included. Left sidebar
-                        fixed width and content area is a fluid full-width.
+                        <a rel="nofollow" href="blogs.html" target="_blank">Gamma Prime Blog</a> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit
+                        amet.
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Creative . Design . Business</span>
@@ -125,10 +125,10 @@
                         <div class="tm-post-link-inner">
                             <img src="img/img-03.jpg" alt="Image" class="img-fluid">
                         </div>
-                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">How can you apply Xtra Blog</h2>
+                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">How can you apply music to Gamma Prime Blog</h2>
                     </a>
                     <p class="tm-pt-30">
-                        You are <u>allowed</u> to convert this template as any kind of CMS theme or template for your custom website builder. You can also use this for your clients. Thank you for choosing us.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolore veritatis tenetur ut iste deleniti quos magni impedit numquam, placeat sequi. Minus velit maiores vitae!
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Music . Audio</span>
@@ -149,7 +149,7 @@
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">A little restriction to apply</h2>
                     </a>
                     <p class="tm-pt-30">
-                        You are <u>not allowed</u> to re-distribute this template as a downloadable ZIP file on any template collection website. This is strongly prohibited as we worked hard for this template. Please contact TemplateMo for more information.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolore veritatis tenetur ut iste deleniti quos magni impedit numquam, placeat sequi. Minus velit maiores vitae!
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Artworks . Design</span>
@@ -167,12 +167,10 @@
                         <div class="tm-post-link-inner">
                             <img src="img/img-05.jpg" alt="Image" class="img-fluid">
                         </div>
-                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">Color hexa values of Xtra Blog</h2>
+                        <h2 class="tm-pt-30 tm-color-primary tm-post-title">Color hexa values of Gamma Prime Blog</h2>
                     </a>
                     <p class="tm-pt-30">
-                        If you wish to kindly support us, please contact us or contribute a small PayPal amount to info [at] templatemo.com that is helpful for us.
-                        <br> Title #099 New #0CC <br>
-                        <span class="tm-color-primary">Text #999 Line #CCC Next #0CC Prev #F0F0F0</span>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolore veritatis tenetur ut iste deleniti quos magni impedit numquam, placeat sequi. Minus velit maiores vitae!
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Creative . Video . Audio</span>
@@ -193,7 +191,7 @@
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">Donec convallis varius risus</h2>
                     </a>
                     <p class="tm-pt-30">
-                        Quisque id ipsum vel sem maximus vulputate sed quis velit. Nunc vel turpis eget orci elementum cursus vitae in eros. Quisque vulputate nulla ut dolor consectetur luctus.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit dolore veritatis tenetur ut iste deleniti quos magni impedit numquam, placeat sequi. Minus velit maiores vitae!
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">Visual . Artworks</span>
@@ -231,15 +229,6 @@
                     </nav>
                 </div>
             </div>
-            <footer class="row tm-row">
-                <hr class="col-12">
-                <div class="col-md-6 col-12 tm-color-gray">
-                    Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-external-link">TemplateMo</a>
-                </div>
-                <div class="col-md-6 col-12 tm-color-gray tm-copyright">
-                    Copyright 2020 Xtra Blog Company Co. Ltd.
-                </div>
-            </footer>
         </main>
     </div>
     <script src="js/jquery.min.js"></script>
