Fix: add links to article's autthor

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -84,13 +84,13 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti fuga excepturi, eum optio quidem iste deleniti neque voluptatibus repellat itaque.
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
-                        <span class="tm-color-primary">Travel . Events</span>
+                        <span class="tm-color-primary">Pprogramming . Tech . AI</span>
                         <span class="tm-color-primary">June 24, 2020</span>
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>36 comments</span>
-                        <span>by Admin Nat</span>
+                        <span>Author . <a href="#">Adebayo Awofuye</a></span>
                     </div>
                 </article>
                 <article class="col-12 col-md-6 tm-post">
@@ -113,7 +113,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>48 comments</span>
-                        <span>by Admin Sam</span>
+                        <span>Author . <a href="#">Victor Loveday</a></span>
                     </div>
                 </article>
                 <article class="col-12 col-md-6 tm-post">
@@ -134,7 +134,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>24 comments</span>
-                        <span>by John Walker</span>
+                        <span>Author . <a href="#">Pedro Autone</a></span>
                     </div>
                 </article>
                 <article class="col-12 col-md-6 tm-post">
@@ -155,7 +155,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>72 comments</span>
-                        <span>by Admin Sam</span>
+                        <span>Author . <a href="#">Benga Latinwo</a></span>
                     </div>
                 </article>
                 <article class="col-12 col-md-6 tm-post">
@@ -176,7 +176,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>84 comments</span>
-                        <span>by Admin Sam</span>
+                        <span>Author . <a href="#">Ahmad Idris</a></span>
                     </div>
                 </article>
                 <article class="col-12 col-md-6 tm-post">
@@ -197,7 +197,7 @@
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>96 comments</span>
-                        <span>by Admin Sam</span>
+                        <span>Author . <a href="#">Umma Kabir</a></span>
                     </div>
                 </article>
             </div>
