--- a/blogs/post.html
+++ b/blogs/post.html
@@ -11,6 +11,7 @@
     <!-- https://fonts.google.com/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/blogs.css" rel="stylesheet">
+    <link href="../logo1.png" rel="icon">
 </head>
 
 <body>
