Feat: hide coment section for now && replace with likes

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -90,7 +90,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>36 comments</span>
+                        <span>36 Likes</span>
                         <span>Author . <a href="#">Adebayo Awofuye</a></span>
                     </div>
                 </article>
@@ -113,7 +113,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>48 comments</span>
+                        <span>48 likess</span>
                         <span>Author . <a href="#">Victor Loveday</a></span>
                     </div>
                 </article>
@@ -134,7 +134,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>24 comments</span>
+                        <span>24 likess</span>
                         <span>Author . <a href="#">Pedro Autone</a></span>
                     </div>
                 </article>
@@ -155,7 +155,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>72 comments</span>
+                        <span>72 likess</span>
                         <span>Author . <a href="#">Benga Latinwo</a></span>
                     </div>
                 </article>
@@ -176,7 +176,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>84 comments</span>
+                        <span>84 likess</span>
                         <span>Author . <a href="#">Ahmad Idris</a></span>
                     </div>
                 </article>
@@ -197,7 +197,7 @@
                     </div>
                     <hr>
                     <div class="d-flex justify-content-between">
-                        <span>96 comments</span>
+                        <span>96 likess</span>
                         <span>Author . <a href="#">Umma Kabir</a></span>
                     </div>
                 </article>
