--- a/blogs/post.html
+++ b/blogs/post.html
@@ -95,7 +95,7 @@
                         </div>
 
                         <!-- Comments -->
-                        <div>
+                        <!-- <div>
                             <h2 class="tm-color-primary tm-post-title">Comments</h2>
                             <hr class="tm-hr-primary tm-mb-45">
                             <div class="tm-comment tm-mb-45">
@@ -141,7 +141,7 @@
                                     <button class="tm-btn tm-btn-primary tm-btn-small">Submit</button>
                                 </div>
                             </form>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <aside class="col-lg-4 tm-aside-col">
