--- a/blogs/post.html
+++ b/blogs/post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Xtra Blog</title>
+    <title>Gamma Prime</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <!-- https://fontawesome.com/ -->
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -81,17 +81,16 @@
                 <div class="col-lg-8 tm-post-col">
                     <div class="tm-post-full">
                         <div class="mb-4">
-                            <h2 class="pt-2 tm-color-primary tm-post-title">Single Post of Xtra Blog HTML Template</h2>
-                            <p class="tm-mb-40">June 16, 2020 posted by Admin Nat</p>
+                            <h2 class="pt-2 tm-color-primary tm-post-title">Why Machine Learning?</h2>
+                            <p class="tm-mb-40">June 16, 2020 posted by <span><a href="#">Adebayo Awofuye</a></span></p>
                             <p>
-                                This is a description of the video post. You can also have an image instead of the video. You can free download
-                                <a rel="nofollow" href="https://templatemo.com/tm-553-xtra-blog" target="_blank">Xtra Blog Template</a> from TemplateMo website. Phasellus maximus quis est sit amet maximus. Vestibulum vel rutrum lorem, ac sodales augue.
-                                Aliquam erat volutpat. Duis lectus orci, blandit in arcu est, elementum tincidunt lectus. Praesent vel justo tempor, varius lacus a, pharetra lacus. </p>
+                                This is a description of the video post. You can also have an image instead of the video. Phasellus maximus quis est sit amet maximus. Vestibulum vel rutrum lorem, ac sodales augue. Aliquam erat volutpat. Duis lectus orci, blandit in arcu est, elementum
+                                tincidunt lectus. Praesent vel justo tempor, varius lacus a, pharetra lacus. </p>
                             <p>
                                 Duis pretium efficitur nunc. Mauris vehicula nibh nisi. Curabitur gravida neque dignissim, aliquet nulla sed, condimentum nulla. Pellentesque id venenatis quam, id cursus velit. Fusce semper tortor ac metus iaculis varius. Praesent aliquam ex vel lectus
                                 ornare tristique. Nunc et eros quis enim feugiat tincidunt et vitae dui.
                             </p>
-                            <span class="d-block text-right tm-color-primary">Creative . Design . Business</span>
+                            <span class="d-block text-right tm-color-primary">Pprogramming . Tech . AI</span>
                         </div>
 
                         <!-- Comments -->
@@ -180,7 +179,7 @@
         </main>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/templatemo-script.js"></script>
+    <script src="js/mo-script.js"></script>
 </body>
 
 </html>
