Fix: add javascript lirary

--- a/blogs/post.html
+++ b/blogs/post.html
@@ -179,7 +179,7 @@
         </main>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="js/mo-script.js"></script>
+    <script src="js/templatemo-script.js"></script>
 </body>
 
 </html>
