Feat: add course

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2>
-                                        <a href="blogs/blogs.html">Enroll</a>
+                                        <a href="courses/ai/machineLearning.html">Enroll</a>
                                     </h2>
                                 </div>
                             </div>
@@ -242,7 +242,7 @@
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2>
-                                        <a href="blogs/blogs.html">Enroll</a>
+                                        <a href="courses/ai/machineLearning.html">Enroll</a>
                                     </h2>
                                 </div>
                             </div>
@@ -257,7 +257,7 @@
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
                                 <div style="margin-top: 10px;" class="section-course-button">
                                     <h2>
-                                        <a href="blogs/blogs.html">Enroll</a>
+                                        <a href="courses/ai/machineLearning.html">Enroll</a>
                                     </h2>
                                 </div>
                             </div>
