Fix: spelling check

--- a/blogs/blogs.html
+++ b/blogs/blogs.html
@@ -85,7 +85,7 @@
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti fuga excepturi, eum optio quidem iste deleniti neque voluptatibus repellat itaque.
                     </p>
                     <div class="d-flex justify-content-between tm-pt-45">
-                        <span class="tm-color-primary">Pprogramming . Tech . AI</span>
+                        <span class="tm-color-primary">Programming . Tech . AI</span>
                         <span class="tm-color-primary">June 24, 2020</span>
                     </div>
                     <hr>
