--- a/blogs/post.html
+++ b/blogs/post.html
@@ -90,7 +90,7 @@
                                 Duis pretium efficitur nunc. Mauris vehicula nibh nisi. Curabitur gravida neque dignissim, aliquet nulla sed, condimentum nulla. Pellentesque id venenatis quam, id cursus velit. Fusce semper tortor ac metus iaculis varius. Praesent aliquam ex vel lectus
                                 ornare tristique. Nunc et eros quis enim feugiat tincidunt et vitae dui.
                             </p>
-                            <span class="d-block text-right tm-color-primary">Pprogramming . Tech . AI</span>
+                            <span class="d-block text-right tm-color-primary">Programming . Tech . AI</span>
                         </div>
 
                         <!-- Comments -->
@@ -148,7 +148,7 @@
                         <hr class="mb-3 tm-hr-primary">
                         <h2 class="mb-4 tm-post-title tm-color-primary">Tags</h2>
                         <ul class="tm-mb-75 pl-5 tm-category-list">
-                            <li><a href="#" class="tm-color-primary">Pprogramming</a></li>
+                            <li><a href="#" class="tm-color-primary">Programming</a></li>
                             <li><a href="#" class="tm-color-primary">Tech</a></li>
                             <li><a href="#" class="tm-color-primary">Artificial Intelligence</a></li>
 
