Feat: add course takem by individuals on their dashboard

--- a/userDashboard.html
+++ b/userDashboard.html
@@ -57,8 +57,8 @@
                     <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
                     <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
                     <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-star"></i> <span>Experience</span></a></li>
+                    <li><a href="#courses" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Courses</span></a></li>
                     <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-                    <!-- <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Specialty</span></a></li> -->
                 </ul>
             </nav>
             <!-- .nav-menu -->
@@ -232,6 +232,96 @@
             </div>
         </section>
         <!-- End Resume Section -->
+
+        <!-- ======= Courses Section ======= -->
+        <section id="courses" class="testimonials section-bg">
+            <div class="container">
+
+                <div class="section-title">
+                    <h2>Courses</h2>
+                </div>
+
+                <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+                    <div class="swiper-wrapper">
+
+                        <div class="swiper-slide">
+                            <div class="testimonial-item" data-aos="fade-up">
+                                <p><b>Project Management</b></p>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>Description of this course goes here. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio. Not more than 20 words
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                                <img style="width: 5rem; height: 2rem;" src="assets/img/portfolio/steamledge_logo.png" class="testimonial-img" alt="">
+                                <h3>Steamledge Limited</h3>
+                                <h4>EdTech</h4>
+                            </div>
+                        </div>
+                        <!-- End testimonial item -->
+
+                        <div class="swiper-slide">
+                            <div class="testimonial-item" data-aos="fade-up">
+                                <p><b>Machine Learning</b></p>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>Description of this course goes here. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio. Not more than 20 words
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                                <img style="width: 2rem; height: 2rem;" src="logo1.png" class="testimonial-img" alt="">
+                                <h3>Gamma Prime</h3>
+                                <h4>AI</h4>
+                            </div>
+                        </div>
+                        <!-- End testimonial item -->
+
+                        <div class="swiper-slide">
+                            <div class="testimonial-item" data-aos="fade-up">
+                                <p><b>Machine Learning</b></p>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>Description of this course goes here. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio. Not more than 20 words
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                                <img style="width: 2rem; height: 2rem;" src="logo1.png" class="testimonial-img" alt="">
+                                <h3>Gamma Prime</h3>
+                                <h4>AI</h4>
+                            </div>
+                        </div>
+                        <!-- End testimonial item -->
+
+                        <div class="swiper-slide">
+                            <div class="testimonial-item" data-aos="fade-up">
+                                <p><b>Machine Learning</b></p>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>Description of this course goes here. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio. Not more than 20 words
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                                <img style="width: 2rem; height: 2rem;" src="logo1.png" class="testimonial-img" alt="">
+                                <h3>Gamma Prime</h3>
+                                <h4>AI</h4>
+                            </div>
+                        </div>
+                        <!-- End testimonial item -->
+
+                        <div class="swiper-slide">
+                            <div class="testimonial-item" data-aos="fade-up">
+                                <p><b>Machine Learning</b></p>
+                                <p>
+                                    <i class="bx bxs-quote-alt-left quote-icon-left"></i>Description of this course goes here. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio. Not more than 20 words
+                                    <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                                </p>
+                                <img style="width: 2rem; height: 2rem;" src="logo1.png" class="testimonial-img" alt="">
+                                <h3>Gamma Prime</h3>
+                                <h4>AI</h4>
+                            </div>
+                        </div>
+                        <!-- End testimonial item -->
+
+
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
+
+            </div>
+        </section>
+        <!-- End Courses Section -->
 
         <!-- ======= Portfolio Section ======= -->
         <section id="portfolio" class="portfolio section-bg">
