Feat: add courses stats to individual dashboard

--- a/userDashboard.html
+++ b/userDashboard.html
@@ -241,6 +241,13 @@
                     <h2>Courses</h2>
                 </div>
 
+                <div style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 2rem; background-color: #3984ed21; border-radius: 2rem; padding: .3rem .5rem; color: white;">
+                    <p style="margin: 3px;"> <span class="text-primary">Enrolled (5)</span></p>
+                    <p style="margin: 3px;"> <span class="text-success">Completed (2)</span></p>
+                    <p style="margin: 3px;"> <span class="text-danger">Ongoing (3)</span></p>
+                </div>
+
+
                 <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                     <div class="swiper-wrapper">
 
