Feat: get started takes you to courses

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 style="color: white;"><span class="typed" data-typed-items="Democratising Access to AI"></span></h2>
 
             <div class="d-flex">
-                <a href="#about" class="btn-get-started scrollto">Get Started</a>
+                <a href="#courses" class="btn-get-started scrollto">Get Started</a>
                 <!-- <a href="https://www.youtube.com/watch?v=IPukuYb9xWw" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
             </div>
         </div>
