Feat: course category secton

--- a/courses/takeCourse.html
+++ b/courses/takeCourse.html
@@ -89,10 +89,10 @@
 </head>
 
 <body>
-    <div id="preloader"></div>
+    <!-- <div id="preloader"></div> -->
     <script src="data/browsersupport.js?3C35BA20"></script>
     <script src="data/player.js?3C35BA20"></script>
-    <div id="content"></div>
+    <div style="height: 98vh; overflow-y: scroll;" id="content"></div>
     <div id="spr0_5dd1b3"></div>
     <script>
         (function(startup) {
