view course from landing page

--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
                             <div class="mt-3">
                                 <h5 style="color: #149DDD;">Machine Learning</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
-                                <div style="margin-top: 10px;" class="section-course-button">
+                                <div style="margin-top: 10px;" class="section-title">
                                     <h2>
-                                        <a href="courses/ai/machineLearning.html">Enroll</a>
+                                        <a href="courses/programming.html">View</a>
                                     </h2>
                                 </div>
                             </div>
@@ -240,9 +240,9 @@
                             <div class="mt-3">
                                 <h5 style="color: #149DDD;">Project Management</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
-                                <div style="margin-top: 10px;" class="section-course-button">
+                                <div style="margin-top: 10px;" class="section-title">
                                     <h2>
-                                        <a href="courses/ai/machineLearning.html">Enroll</a>
+                                        <a href="courses/management.html">View</a>
                                     </h2>
                                 </div>
                             </div>
@@ -255,9 +255,9 @@
                             <div class="mt-3">
                                 <h5 style="color: #149DDD;">AI Nano-Degree</h5>
                                 <p>Lorem, ipsum dolor sit amet lor consectetur adipisicing elit. Libero, nam....</p>
-                                <div style="margin-top: 10px;" class="section-course-button">
+                                <div style="margin-top: 10px;" class="section-title">
                                     <h2>
-                                        <a href="courses/ai/machineLearning.html">Enroll</a>
+                                        <a href="courses/premium.html">View</a>
                                     </h2>
                                 </div>
                             </div>
